MNEMOSYNE 0.9.7: 2006-10-27

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-multiple items can now be selected in the 'edit items' dialog in order
 to delete them, change their categories, or add their vice versas.
-added option to import text files where question and answer are each on
 their own line.
-make delete button work in 'edit items' dialog (reported by J. Forrez).
-worked around oddity (extra first character in text file) when importing 
 Word unicode text files.
-various small interface cleanups and fixes.
-updated documentation on the website.


MNEMOSYNE 0.9.6: 2006-10-07

-added LaTeX support for formulas, e.g. <latex>x^2+y^2=z^2</latex>. For 
 this you need latex and dvipng installed. Windows users can download 
 MiKTeX. (thanks to input from Henrik Skov Midtiby and J. David Lee.)
-added possibility to preview an item. Useful if you work with tags.
-added import from SuperMemo7 text files (code thanks to Dirk Herrmann).
-either space, enter or return can be used to show the answer. The default
 answer grade is set to 4, which once again can be chosen by either space,
 enter or return (patch by Dirk Herrmann).
-importing of txt files in utf8 unicode encoding now works (patch by Ian 
 MacLean).
-exporting to txt files now uses utf8 encoding.
-the total number of items in the status bar now only takes into account
 items in active categories (patch by Mike Charlton).
-prevent infinite recursion when searching for an item that was recently 
 deleted.
-the titlebar now displays unicode filenames correctly.
-after the window expands to accomodate a large item, it will shrink 
 back again.
-fixed incorrect button text when switching databases.
-new grade 0/1 items will now be scheduled after existing grade 0/1 items.


MNEMOSYNE 0.9.5: 2006-08-03

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your